--- a/_posts/2024-12-30-생성 모델링 이론.md
+++ b/_posts/2024-12-30-생성 모델링 이론.md
@@ -35,13 +35,13 @@ tags: [AE]
 
 ![img](https://velog.velcdn.com/images/alwls5773/post/669a13df-7eb8-40b7-899a-f730d809897c/image.png)
 
-다시 돌아와서, 결국 앞에 말했던 정보를 최소화한다라는 말은 **입력이미지에서 차원을 낮춰가면서 특징을 포착해낸다** 라는 특성과 맞닿아 있음을 말한다. 그리고 특징을 포착해낸 모든 벡터(임베딩)들을 모아놓은 잠재공간에서 역으로 그 공간에서 벡터를 선택해 **이미지를 생성함(샘플링)도 가능**하다는 것이다.
+다시 돌아와서, 결국 앞에 말했던 정보를 최소화한다라는 말은 **입력이미지에서 차원을 낮춰가면서 특징을 포착해낸다** 라는 특성과 맞닿아 있음을 말한다. 그리고 특징을 포착해낸 모든 벡터(임베딩,여기선 포인트)들을 모아놓은 잠재공간에서 역으로 그 공간에서 포인트를 선택해 **이미지를 생성함(샘플링)도 가능**하다는 것이다.
 
 입력 데이터인 784개의 뉴런들을 500개, 300개, 2개로 압축시킴으로써 입력 데이터의 대표적인 특성을 추출한다. 그리고 이를 기반으로 다시 대칭적인 구조로 300개, 500개 뉴런으로 확장시킨 후 최종적으로 입력 데이터와 똑같은 사이즈인 784개의 뉴런 개수로 최종 값을 출력시킨다. 이러한 구조들로 보통 만들어 진다고 한다.
 
 ![img2](https://gdsc-university-of-seoul.github.io/assets/images/post-VAE/img2.png)
 
-잠재공간과 임베딩(최적화된 벡터)을 시각화해본 모습인데, 여기서 빨간색은 0 이런식으로 9까지 분류를 해 놓은 모습인데, 오토 인코더는 레이블을 따로 구별을 안해줘도 어차피 인코딩 하는 과정에서 자기가 스스로 잠재공간에서의 위치를 정하기 떄문에, 자동적으로 저렇게 비슷한 데이터들끼리 위치가 모인다. 즉 답을 주지 않고 스스로 학습하게 하는 **비지도 학습**을 하게 된다.
+잠재공간과 임베딩(최적화된 벡터)을 시각화해본 모습인데, 여기서 빨간색은 0 이런식으로 9까지 분류를 해 놓은 모습인데, 오토 인코더는 레이블을 따로 구별을 안해줘도 어차피 인코딩 하는 과정에서 자기가 스스로 잠재공간에서의 위치를 학습데이터들을 인코더를 통해 포인트들을 일일히 찍으면서 정하기 떄문에, 자동적으로 저렇게 비슷한 데이터들끼리 위치가 모인다. 즉 답을 주지 않고 스스로 학습하게 하는 **비지도 학습**을 하게 된다.
 
 ## 요약
 
