--- a/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
+++ b/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
@@ -7,9 +7,9 @@ tags: [확률이론]
 
 ## 확률 밀도 함수
 
-확률 밀도 함수란 어떠한 X집합(X = x1,x2,x3...)이 있을 떄, 0과 1 사이의 숫자로 매핑하는 함수 P(x), 표본 공간에 있는 모든 포안트에 대해 밀도 함수를 적분 했을 떄 1이 되어야 한다.
+확률 밀도 함수란 어떠한 X집합(X = x1,x2,x3...)이 있을 떄, 0과 1 사이의 숫자로 매핑하는 함수 P(x), 표본 공간에 있는 모든 포인트에 대해 밀도 함수를 적분 했을 떄 1이 되어야 한다.
 
-이 떄 관측 데이터 셋을 생성한 실제 밀도 함수 $P_{data}(x)$ 는 하나지만, 이 밀도 함수를 추정하는데 사용할 수 있는 밀도 함수 $P_{model}(x)$는 무수히 많다, 즉 실제 밀도 함수를 구하는게 모델링 입장에선 베스트겠지만, 불가능 하기 떄문에 저 함수를 추정하는 밀도 함수 $P_{model}(x)$ 중에서 가장 원본과 가까운 함수를 구하고자, 관측 데이터 셋에 가장 가깝게 찍어 내는 모델 함수를 구하고자 하는거다.
+이 떄 관측 데이터 셋을 생성하는 실제 밀도 함수 $P_{data}(x)$ 는 하나지만, 이 밀도 함수를 추정하는데 사용할 수 있는 밀도 함수 $P_{model}(x)$는 무수히 많다, 즉 실제 밀도 함수를 구하는게 모델링 입장에선 베스트겠지만, 불가능 하기 떄문에 저 함수를 추정하는 밀도 함수 $P_{model}(x)$ 중에서 가장 원본과 가까운 함수를 구하고자, 관측 데이터 셋에 가장 가깝게 찍어 내는 모델 함수를 구하고자 하는거다.
 
 ```python
 import numpy as np
@@ -72,7 +72,7 @@ plt.show()
 
 ## 모수 모델링
 
-안정적인 $P_{model}(x)$를 찾는 데 사용하는 기법, **모수 모델**이란 유한한 개수의 파라미터(무엇이 되었던 간에)를 사용해 기술 할 수 있는 밀도 함수, 즉 파라미터들을 가지고 어떤 확률 분포를 구하고자 할 떄를 말한다,
+그러한 안정적인, 가까운 $P_{model}(x)$를 찾는 데 사용하는 기법인 **모수 모델**이란 유한한 개수의 파라미터(무엇이 되었던 간에)를 사용해 기술 할 수 있는 밀도 함수, 즉 파라미터들을 가지고 어떤 확률 분포를 구하고자 하는 방법이다.
 
 ```py
 import numpy as np
@@ -173,7 +173,7 @@ for key, value in fit_results.items():
 $$
 L(\theta | x) = P_\theta(x)
 $$
-이렇게 정의 되는데, 대충 "모수가 얼마나 그럴듯 한가"를 측정하는 정도라고 생각하면 될 거 같다, 앞에서 모수 모델링을 구할 떄 쓰이는거라고 생각하면 될 거 같다. 즉 **주어진 관측값이 특정 확률분포로부터 나왔을 확률 (= 연속확률밀도함수의 y 값)** 으로 어떤 값이 관측되었을 때, 해당 관측값이 어떤 확률분포로부터 나왔는지에 대한 확률이다. 확률의 반대 개념으로 고정되는 요소가 관측값 x이고 그걸 통해 확률분포가 여기서 나왔을 확률을 구하는, 이름 그대로 이런 값이 나오는게 어느정도로 가능해? 이런 느낌인거 같다. 그러므로 저 위의 개념이랑 합치면 확률밀도 함수를 구성하는 파라미터 $\theta$도 그런 의미에서 관측 포인트 x에 따라 구해지는 값이 되는거다. **가능도라는건 포인트집합들을 가지고 어떤 밀도함수가 어느정도 확률이 있을지에 대해 논하는거** 
+이렇게 정의 되는데, 대충 "모수가 얼마나 확률 밀도 함수 설명을 그럴듯 하게 하는가"를 측정하는 정도라고 생각하면 될 거 같다, 앞에서 모수 모델링을 구할 떄 쓰이는거라고 생각하면 될 거 같다.  **주어진 관측값이 특정 확률분포로부터 나왔을 확률 (= 연속확률밀도함수의 y 값)** 으로 어떤 값이 관측되었을 때, 해당 관측값이 어떤 확률분포로부터 나왔는지에 대한 확률이다. 확률의 반대 개념으로 고정되는 요소가 관측값 x이고 그걸 통해 확률분포가 여기서 나왔을 확률을 구하는, 이름 그대로 이런 값이 나오는게 어느정도로 가능해? 이런 느낌인거 같다. 그러므로 저 위의 개념이랑 합치면 확률밀도 함수를 구성하는 파라미터 $\theta$도 관측 포인트 x에 따라 구해지는 값이 되는거다. **가능도라는건 포인트집합들을 가지고 어떤 밀도함수가 어느정도 확률이 있을지에 대해 논하는거** 
 
 그러므로 모수 모델링은 데이터셋 X가 관측 될 가능도를 최대화하는 파라미터 $\hat{\theta}$ 의 최적값을 구하는 것이다.
 
