변이형오토인코더 내용 수정, 오토인코더 수정

--- a/_posts/2025-1-6-변이형 오토 인코더.md
+++ b/_posts/2025-1-6-변이형 오토 인코더.md
@@ -27,7 +27,7 @@ tags: [VAE]
 
 그래서 이러한 문제들을 해결하기 위해서 어떻게 해야할까? 그냥 직관적으로 생각해보면, 숫자 1이라는 이미지가 **해당 영역**에서 뽑을 수 있다는 확실한 보증을 하면 된다. 그러면 그 보증을 한다는건 어떻게 하는 걸까?
 
-## 영역의 보증해주는 변이형 인코더
+## 영역을 보증해주는 변이형 인코더
 
 들어가기 앞서
 
@@ -61,9 +61,11 @@ tags: [VAE]
 
 ## 변이형 오토인코더
 
-그래서 앞에 설명한 다변량 정규분포는 무슨 목적으로 설명했냐? 바로 잠재공간의 차원들에 저 정규분포들을 도입한다는 아이디어가 변이형 오토인코더이다! 잠재공간의 차수가 2차원 이상으로 높아지는 거때문에 다변량 정규분포(여기선 말했듯이, 다변량 표준정규분포)를 이용한다는건 알겠지만, 왜 쓰는걸까?
+그래서 앞에 설명한 다변량 정규분포는 무슨 목적으로 설명했냐? 바로 잠재공간의 차원들에 저 정규분포들을 도입한다는 아이디어가 변이형 오토인코더이다. 잠재공간의 차수가 2차원 이상으로 높아지는 거때문에 다변량 정규분포(여기선 말했듯이, 다변량 표준정규분포)를 이용한다는건 알겠지만, 왜 쓰는걸까?
 
-앞서 오토인코더의 문제점을 짚을 떄, **특정 영역에 있다는 보증**이 있게 해야 한다고 했다. ![VAE: Variational Autoencoders — How to Employ Neural Networks to Generate  New Images | by Saul Dobilas | Towards Data Science](https://miro.medium.com/v2/resize:fit:1400/1*VN5ILV7z8mHM3oUS_VDqzg.png)
+앞서 오토인코더의 문제점을 짚을 떄, **특정 영역에 있다는 보증**이 있게 해야 한다고 했다.
+
+ ![VAE: Variational Autoencoders — How to Employ Neural Networks to Generate  New Images | by Saul Dobilas | Towards Data Science](https://miro.medium.com/v2/resize:fit:1400/1*VN5ILV7z8mHM3oUS_VDqzg.png)
 
 이런 식으로, 어떤 하나의 포인트로 두는게 아니라 분홍색 영역, 초록색 영역, 노랑색 영역으로 각각의 영역을 (잠재공간이 다차원이기 떄문에) 다변량 정규분포로 다뤄 잠재공간의 각 차원의 평균과 정규분포를 다뤄 잠재공간의 모호함을 해결하고자 하는거다. **각 포인트가 차원이라는게 아니다, 잠재공간이 다차원인거고, 포인트들은 거기에 따라 다변량정규분포가 그려지는거다. 즉 각 이미지는 전체 잠재 공간에서 하나의 다변량 정규분포로 표현된다는 거다.**
 
