변이형 오토 인코더 수정

--- a/_posts/2025-1-6-변이형 오토 인코더.md
+++ b/_posts/2025-1-6-변이형 오토 인코더.md
@@ -67,13 +67,13 @@ tags: [VAE]
 
  ![VAE: Variational Autoencoders — How to Employ Neural Networks to Generate  New Images | by Saul Dobilas | Towards Data Science](https://miro.medium.com/v2/resize:fit:1400/1*VN5ILV7z8mHM3oUS_VDqzg.png)
 
-이런 식으로, 어떤 하나의 포인트로 두는게 아니라 분홍색 영역, 초록색 영역, 노랑색 영역으로 각각의 영역을 (잠재공간이 다차원이기 떄문에) 다변량 정규분포로 다뤄 잠재공간의 각 차원의 평균과 정규분포를 다뤄 잠재공간의 모호함을 해결하고자 하는거다. **각 포인트가 차원이라는게 아니다, 잠재공간이 다차원인거고, 포인트들은 거기에 따라 다변량정규분포가 그려지는거다. 즉 각 이미지는 전체 잠재 공간에서 하나의 다변량 정규분포로 표현된다는 거다.**
+이런 식으로, 어떤 하나의 포인트로 두는게 아니라 분홍색 영역, 초록색 영역, 노랑색 영역으로 각각의 영역을 다변량 정규분포로 다뤄 (잠재공간이 다차원이기 떄문에) 잠재공간의 각 차원의 평균과 정규분포를 다뤄 **확률분포라는 형태의 영역으로 잠재공간의 모호함을 해결**하고자 하는거다. **각 포인트가 차원이라는게 아니다, 잠재공간이 다차원인거고, 포인트들은 거기에 따라 다변량정규분포가 그려지는거다. 즉 각 포인트(그리고 거기서 한 점을 찍은 이미지)는 전체 잠재 공간에서 하나의 다변량 정규분포로 표현된다는 거다.**
 
 즉 인코더를 거쳐 잠재 공간의 다변량 정규 분포를 정의하는 다음 2개의 벡터로 인코딩하면 된다.
 
 z_mean : 이 분포의 평균 벡터
 
-z_log_var : 차원별 분산의 로그 값
+z_log_var : 차원별 분산의 로그 값 (보통 로그로 바꿔놔야 계산이 편해진다)
 
 평균 벡터 μ = [μ₁, μ₂, ..., μₖ]
 
@@ -89,7 +89,7 @@ z_log_var : 차원별 분산의 로그 값
 
 실제 잠재 벡터 z는 이 평균과 분산을 사용해 샘플링됨
 
- z = μ + σ * ε    (ε ~ N(0,1))
+ z = μ + σ * ε    (ε ~ N(0,1)) (각 차원에서)
 
 ### 다변량 표준정규분포인 이유
 
