오토 인코더 실습

--- a/_posts/2025-2-9-변이형 오토 인코더 실습.md
+++ b/_posts/2025-2-9-변이형 오토 인코더 실습.md
@@ -45,7 +45,7 @@ image , labels = next(dataiter)
 print(labels)
 
 images, _ = next(iter(train_dataloader))
-print("입력 이미지 shape:", images.shape)  # [batch_size, 1, 32, 32] 형태일 것입니다
+print("입력 이미지 shape:", images.shape)  # [batch_size, 1, 32, 32]
 
 plt.figure(figsize=(20,4))
 for idx in range(10):
@@ -58,13 +58,19 @@ for idx in range(10):
 plt.show
 ```
 
+tensor([1, 2, 6, 0, 3, 8, 6, 6, 4, 2, 5, 7, 2, 0, 8, 1, 2, 7, 1, 4, 8, 5, 8, 7,        0, 4, 6, 9, 5, 9, 2, 2, 2, 8, 7, 2, 0, 8, 4, 7, 7, 8, 4, 4, 3, 3, 4, 5,        9, 3, 9, 8, 1, 4, 9, 5, 0, 9, 8, 9, 4, 8, 0, 9, 9, 4, 7, 0, 5, 8, 8, 9,        9, 0, 4, 8, 8, 3, 4, 9, 5, 3, 6, 4, 9, 7, 3, 5, 4, 0, 3, 6, 3, 9, 5, 5,        1, 9, 1, 9])
+
+입력 이미지 shape: torch.Size([100, 1, 32, 32])
+
+![image-20250209041429910](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250209041429910.png)
+
 ```py
 # 2. VAE 모델 정의 (인코더, 재파라미터라이제이션, 디코더 포함)
 class VAE(nn.Module):
     def __init__(self, image_size=32, latent_dim=2):
         super(VAE, self).__init__()
-        self.image_size = image_size
-        self.latent_dim = latent_dim
+        self.image_size = image_size #생성자 init으로 클래스를 만들 때 객체 상태를 저장하여 해당 값을 사용하기 위해
+        self.latent_dim = latent_dim #만약 객체의 속성으로 저장을 안하면 생성자 내부에서만 쓰이는 지역 변수가 되기 때문에 다른 				                               클래스에서 접근이 불가능
         
         # 인코더: 간단한 합성곱 네트워크 (입력 채널 1 → 32, 32 → 64)
         self.encoder = nn.Sequential(
@@ -93,7 +99,7 @@ class VAE(nn.Module):
 
     def encode(self, x):
         h = self.encoder(x)
-        h = h.view(-1, self.flatten_dim)
+        h = h.view(-1, self.flatten_dim) #view 함수는 텐서의 모양을 변경, 여기선 텐서를 4차원에서 2차원으로 바꿔주는 역할
         mu = self.fc_mu(h)
         logvar = self.fc_logvar(h)
         return mu, logvar
@@ -120,6 +126,42 @@ class VAE(nn.Module):
 model = VAE(image_size=IMAGE_SIZE, latent_dim=EMBEDDING_DIM).to(device)
 print(model)
 ```
+
+#### 합성곱 레이어
+
+**Conv2d** 는 합성곱 레이어로, 이미지같은걸 신경망으로 다루고자 할 떄 쓰는데, 첫번쨰 인자에는 입력이미지의 채널 수, 두번 쨰인자는 출력이미지의 채널 수, kernel size는 합성곱의 필터 사이즈, padding은 이미지의 가장자리에 0의 값을 가진 픽셀을 만들어서 합성곱후에도 사이즈가 맞게 해주고, stride는 필터가 이미지를 지나갈 떄 몇 픽셀씩 이동하는지인데 2일 경우 2픽셀마다 계산 하므로 이미지 사이즈가 1/2가 된다.
+
+**ConvTranspose2d**는 합성곱의 전치로 디코드에 쓰이는 걸 보면 알듯이 위의 합성곱의 반대작용, 즉 차원을 늘리고 이미지를 재구성해주는 것이라고 이해 하면 된다.
+
+#### Reparameterize
+
+**reparameterize**는 재피라미터트릭으로, 앞에 말했듯이 각 차원의 정규분포에서 샘플링해서 이미지를 생성하고자 하는데, 이 떄 이 정규분포의 영역의 생김새는 평균과(mu) 분산(var)에 따라 달라지므로, eps라는 표준정규분포(N ~ 0,1)를 따로 분리해서 mu + eps * std라는 식으로 평균과 분산을 떄서 저 식으로 정규분포를 구현한다. 이걸 하는 이유는 VAE는 확률적 샘플링을 사용하는데, 이 과정은 미분 불가능, 
+
+따라서, fc_mu와 fc_logvar로부터 계산된 *μ*와 log*σ*2를 기반으로,
+
+*z*=*μ*+*ϵ*×exp(1/2log*σ*2)
+
+형식으로 *ϵ* (표준 정규분포에서 샘플링한 값)을 이용한 재파라미터라이제이션을 통해 *μ*와 *σ*에 의존적인 샘플링을 수행
+
+이 과정 덕분에 VAE는 역전파 과정에서 gradient를 정상적으로 전달받을 수 있다.
+
+#### log로 분산을 계산하는 이유
+
+ㅋ₩분산은 항상 0 이상의 값을 가져야 하지만, 로그를 취하면 값의 범위가 (−∞,∞)(−∞,∞)가 되어 수치적으로 안정적인 학습이 가능 , 나중에 reparameterization trick에서 𝜎=exp⁡(0.5×logvar)*σ*=exp(0.5×logvar)로 계산 
+
+#### view() 함수의 역할
+
+```py
+h = h.view(-1, self.flatten_dim)
+```
+
+h는 합성곱(convolutional) 레이어를 통과한 후의 출력, 4차원(배치 크기, 채널 수, 높이, 너비)의 형태, 즉, (배치 크기, 64, reduced_size, reduced_size) 형태의 텐서를 (배치 크기, 64 * reduced_size * reduced_size) 형태로 평평하게(Flatten) 만드는 역할, 여기서 -1이 배치크기를 자동적으로 계산 해주고(같은 첫번째 인자에 있으니까) 두번쨰 인자인 flatten_dim이 나머지 차원들을 모두 더해서 평평한 1차원에 매핑하는 역할이다.
+
+#### Model(data)
+
+model(data)를 호출하면, 내부적으로 VAE 클래스의 forward() 메서드가 실행됌.
+
+그리하여 return값으로 평균, 분산, 재구성 이미지를 반환함
 
 ```py
 def loss_function(recon_x, x, mu, logvar, beta):
@@ -162,8 +204,54 @@ optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)
 train_model_anneal(model, train_dataloader, optimizer, EPOCHS, BETA, device)
 ```
 
+#### Loss
+
+오차 함수는 kl발산항과 이진교차엔트로피의 합으로 계산하고 여기서 beta라는 하이퍼 파라미터를 이용하여 가중치를 줌
+
+또한 BCE의 계산 방식은 mean으로 각 배치마다 나오는 평균 손실을 이용
+
+#### Kl_weight
+
+KL 항에 대한 Annealing (가중치 스케일링)
+
+학습 초반에 KL divergence의 가중치를 낮게 주었다가 점차 증가시켜 latent 공간의 collapse를 막고, 다양한 이미지를 생성하도록 함.
+
+즉, 초기엔 재구성 손실(BCE)에 더 집중하고, 에포크가 진행됨에 따라 KL의 영향력을 점차 키우는 방식
+
+ 잠재 변수(*z*)의 다양성을 확보하는 데 도움을 줄 수 있음
+
+이러한 작업들을 한 이유는 후방 붕괴가 일어났기 떄문에
+
+### batch_idx와 (data, _)의 역할 및 _의 의미
+
+for batch_idx, (data, _) in enumerate(dataloader) 구문 설명:
+
+#### enumerate(dataloader)
+
+dataloader는 통상 배치 단위로 데이터를 반환
+
+enumerate()를 사용하면 각 배치에 대해 (배치 인덱스, 데이터) 형태의 튜플을 얻게 됌,
+
+여기서 batch_idx는 현재 몇 번째 배치인지를 나타내는 정수
+
+#### (data, _) 부분:
+
+dataloader가 반환하는 배치 데이터는 (inputs, labels) 형태
+
+코드에서는 이미지 데이터(data)만 사용할 예정이고, 라벨(labels)은 사용하지 않음
+
+파이썬에서 언더스코어(_)는 “이 변수는 사용하지 않겠다”는 관례적인 표현으로, 해당 위치의 값을 무시하겠다는 의미
+
+따라서 (data, _)는 첫 번째 요소에는 실제 입력 데이터(이미지)가, 두 번째 요소에는 라벨이 들어오지만 라벨은 사용하지 않겠다는 뜻
+
+즉,
+
+batch_idx는 현재 몇 번째 배치를 처리하고 있는지 알려주고,
+
+(data, _)에서 data는 실제 입력 텐서(예: 이미지 데이터)를, _는 사용하지 않는 라벨 데이터를 의미
+
 ```py
-# 6. 평가: 잠재 공간 시각화
+# 평가: 잠재 공간 시각화
 def visualize_latent_space(model, dataloader, device):
     model.eval()
     all_mu = []
@@ -188,6 +276,74 @@ def visualize_latent_space(model, dataloader, device):
 visualize_latent_space(model, test_dataloader, device)
 ```
 
+![image-20250209041541733](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250209041541733.png)
+
+잠재 벡터의 분포와 레이블간의 관계를 확인할 수 있는 산점도를 표시
+
+#### Model.eval()
+
+모델이 train모드에서 평가모드로 바꿈을 명시하는 코드
+
+#### With torch..no_grad():
+
+모델이 평가모드로 변했기 떄문에, 모델을 돌리는 중에는 gridient를 계산하지 않게 하여 속도와 최적화
+
+#### torch.cat()
+
+torch.cat() 함수는 여러 개의 텐서를 하나로 연결할 때 사용, 예를 들어, 텐서 리스트 [tensor1, tensor2, tensor3]가 있을 때,
+
+```py
+  combined = torch.cat([tensor1, tensor2, tensor3], dim=0)
+```
+
+이 코드는 지정한 차원(dim=0)을 기준으로 세 텐서를 하나의 텐서로 합침
+
+코드에서는 여러 배치(batch)로부터 나온 mu와 labels를 리스트에 저장한 후, 나중에 torch.cat()을 사용하여 이 리스트들을 하나의 텐서로 합치는 데 사용
+
+#### mu.cpu()와 labels.cpu()
+
+.cpu()는 현재 텐서가 GPU 상에 있다면 이를 CPU 메모리로 옮김, 모델과 데이터가 GPU에서 연산되고 있을 경우, mu나 labels 텐서도 GPU에 위치,
+
+하지만, 리스트에 저장하거나 시각화를 위해 (시각화 도구(예: matplotlib, NumPy)와 호환되게) NumPy 배열로 변환하려면 CPU에 있는 텐서여야 함. GPU에 있는 텐서를 직접 NumPy 변환하려고 하면 에러가 발생, 따라서 .cpu()를 호출하여 CPU 메모리로 옮긴 후 .numpy() 등으로 변환
+
+#### scatter = plt.scatter(all_mu[:, 0], all_mu[:, 1], c=all_labels, cmap='viridis', s=2)
+
+All_mu는 mu라는 2차원인 평균값을 모은 리스트이고, 여기서 첫번 째 인자는 슬라이싱 표기법으로 해당 차원의 모든 인덱스를 선택한 것인데 여기서 이 위치는 샘플데이터를 가리킨다, all_mu는 shape이 (N, 2)이기 때문에 두 번째 차원에는 2개의 요소(각각 잠재 변수의 값)이 있다, 즉 (1,0)과 (1,1)의 의미는 리스트중에 2번쨰(첫번쨰 인자가 1이니까 0,1,2,3...)의 첫번쨰 잠재차원값 (1,0)과 두번 째 잠재 차원값 (1,1) 로 생각 할 수 있다, 모든 평균 값을 모은 리스트를 스캐터로 표현 하기 위해서 x인자와 y인자를 저렇게 모든 평균값으로 넣어줘서 스캐터형태로 표현했다. 즉 
+
+all_mu[:, 0]: 모든 샘플의 첫 번째 latent 차원 값.
+
+all_mu[:, 1]: 모든 샘플의 두 번째 latent 차원 값.
+
+이다
+
+#### c=all_labels
+
+c는 각 산점도 점의 색상(color)을 지정하는 매개변수입니다.
+
+여기서는 각 데이터 포인트의 색상을 all_labels 값에 따라 지정합니다.
+
+즉, all_labels에 들어있는 숫자나 범주 값에 따라 점들의 색상이 결정됩니다.
+
+예를 들어, 만약 all_labels가 0부터 9까지의 숫자로 구성되어 있다면, 각 숫자마다 다른 색상이 할당되어 시각적으로 구분할 수 있게 됩니다.
+
+#### cmap='viridis'
+
+cmap은 colormap (색상 맵)을 지정하는 매개변수입니다.
+
+'viridis'는 matplotlib에서 제공하는 colormap 중 하나입니다.
+
+이 colormap은 데이터의 값에 따라 일관되고 시각적으로 구분하기 쉬운 색상 그라데이션(예, 파랑에서 노랑 또는 보라에서 노랑)으로 설정됩니다.
+
+즉, all_labels에 의해 매핑된 값들이 'viridis'라는 colormap에 의해 특정 색상으로 변환됩니다.
+
+#### s=2
+
+s는 산점도에서 각 점의 크기(size)를 지정하는 매개변수입니다.
+
+값이 2로 지정되어 있으므로, 각 데이터 포인트가 작고 촘촘하게 나타나게 됩니다.
+
+점의 크기는 시각화의 밀도나 전체 그림에서의 밸런스를 맞추기 위해 조정할 수 있습니다.
+
 ```py
 # 7. 평가: 원본 이미지와 재구성 이미지 비교
 def plot_reconstructions(model, dataloader, device, n=10):
@@ -211,6 +367,14 @@ def plot_reconstructions(model, dataloader, device, n=10):
 
 plot_reconstructions(model, test_dataloader, device, n=10)
 ```
+
+![image-20250209041554860](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250209041554860.png)
+
+원본 이미지와 재구성된 이미지의 비교를 통해 모델의 재구성 성능을 확인
+
+#### .squeeze()
+
+텐서의 불필요한 차원(크기가 1인 차원)을 제거합니다. 예를 들어, [1, 1, IMAGE_SIZE, IMAGE_SIZE]를 [IMAGE_SIZE, IMAGE_SIZE]로 만들어서 이미지 형태로 쓰기 좋게 합니다.
 
 ```py
 # 8. 평가: 잠재 공간 격자 샘플링으로 이미지 생성 (잠재 차원이 2인 경우에만 수행)
@@ -250,3 +414,6 @@ def plot_latent_grid(model, device, image_size, latent_dim, grid_size=15):
 plot_latent_grid(model, device, IMAGE_SIZE, EMBEDDING_DIM, grid_size=15)
 ```
 
+![image-20250209041606718](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250209041606718.png)
+
+latent 공간이 2차원일 때, 잠재 공간의 여러 지점을 샘플링하여 디코더가 생성하는 이미지를 격자 형태로 보여줌
