--- a/_posts/2023-12-27-선형대수학 3강 대수구조.md
+++ b/_posts/2023-12-27-선형대수학 3강 대수구조.md
@@ -12,7 +12,7 @@ tags: [선형대수학]
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228002940957.png" alt="image-20231228002940957" style="zoom:50%;" />
 
-우리는 전 단원에서 벡터의 곱(가위곱)이 두 벡터가 이루는 평행사변형의 넓이와 수직인 방향으로 벡터가 나오는 것을 확인했다, 그리고 저 2 문제에서 행렬식의 결과값을 보면 두 벡터가 이루는 평행사변형의 넓이(5번 문제는 직각육면체)와 같음을 확인 할 수 있다. 벡터의 곱을 구할 때 행렬식을 사용하므로 당연할 수 도 있다.
+벡터의 곱(가위곱)이 두 벡터가 이루는 평행사변형의 넓이와 수직인 방향으로 벡터가 나오는 것을 확인했다, 그리고 저 2 문제에서 행렬식의 결과값을 보면 두 벡터가 이루는 평행사변형의 넓이(5번 문제는 직각육면체)와 같음을 확인 할 수 있다. 벡터의 곱을 구할 때 행렬식을 사용하므로 당연할 수 도 있다.
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228003256111.png" alt="image-20231228003256111" style="zoom:50%;" />
 
@@ -107,5 +107,3 @@ span(S)=[k(1,0)+m(0,1)\ |\ k,m \in F]\\
 =R^2
 $$
 이 식에서의 선형생성의 의미는 2차원 실수벡터공간(유클리드 공간)이 된다, 즉 **S라는 집합은 2차원 실수벡터공간을 만들어 낼 수 있다는 말**이다, S집합은 (1,0),(0,1) 두개의 벡터로 이루어진 집합이였다, 이 두 벡터는 2차원 실수벡터공간을 만들어내는데 있어서 근본적인 역할을 할 수 있다. 이 두 벡터로 안에 있는 모든 원소들을 선형결합할 수 있기 때문이다.
-
-이번에 배운 내용들은 벡터공간이라는 것에 대한 수학적인 정의이다, 우리가 딥러닝을 하고자 할 때는 필요없을지도 모르지만 이런 기초를 다지는 것 또한 중요한 부분이라 생각한다.
