--- a/_posts/2023-12-30-선형대수학 5강 정리2.md
+++ b/_posts/2023-12-30-선형대수학 5강 정리2.md
@@ -9,7 +9,7 @@ tags: [선형대수학]
 
 
 
-#### 선형대수란 선형성이 보장되는 함수나 시스템을 우리가 행렬의 형태로 표현할 수 있음을 말하는 것이다. 즉 사상(함수)은 행렬이다!
+#### 선형대수란 선형성이 보장되는 함수나 시스템을 우리가 행렬의 형태로 표현할 수 있음을 말하는 것이다. 즉 사상(함수)은 행렬이다
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231229161146517.png" alt="image-20231229161146517" style="zoom:67%;" />
 
