--- a/_posts/2024-4-10-vsc 작업 효율을 위한 설정 단축키편.md
+++ b/_posts/2024-4-10-vsc 작업 효율을 위한 설정 단축키편.md
@@ -39,7 +39,7 @@ tags: [vsc]
 
 이것을 눌러보면 내가 누르는 키대로 이 키가 눌렀을 때 실행되는 작동이 검색될거다, 그래서 그거랑 겹치는지 확인하고 잘 세팅해보자.
 
-예를 들어 필자는 아까 말한 shift cmd e가 파일탐색기로 들어가는 단축키인데 이게 좀 불편하다, 그래서 cmd e로 그냥 바로 들어갈 수 있는지 확인해보고자 했다,<img src="https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240410181252578.png" alt="image-20240410181252578" style="zoom:67%;" />
+예를 들어 아까 말한 shift cmd e가 파일탐색기로 들어가는 단축키인데 이게 좀 불편하다, 그래서 cmd e로 그냥 바로 들어갈 수 있는지 확인해보고자 했다,<img src="https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240410181252578.png" alt="image-20240410181252578" style="zoom:67%;" />
 
 안타깝게도 find with Selection 이라는 유용한 명령어가 이미 바인딩 돼있었다, 그래서 다른 키를 찾아보고 있는중이다, 참고로 이 명령어는 현재 파일에 내가 선택한 단어와 똑같은 단어 모두를 일괄적으로 바꾸는거다.
 
