--- a/_posts/2025-3-19-lstm 파이토치 훈련.md
+++ b/_posts/2025-3-19-lstm 파이토치 훈련.md
@@ -428,6 +428,254 @@ current_prompt = " ".join([self.idx2token[idx] for idx in tokens])
 
 - 생성된 토큰을 추가합니다.
 
+```py
+# 모델 초기화 함수
+def initialize_model(vocab_size, embedding_dim, hidden_dim, dropout_rate=0.1):
+    model = LSTMLM(vocab_size, embedding_dim, hidden_dim, dropout_rate)
+    model = model.to(device)
+    
+    # 손실 함수 및 옵티마이저 설정
+    criterion = nn.CrossEntropyLoss(ignore_index=0)  # <PAD> 토큰 무시
+    optimizer = optim.Adam(model.parameters())
+    
+    return model, criterion, optimizer
+
+# 훈련 함수
+def train(model, train_loader, criterion, optimizer, epoch, device):
+    model.train()
+    epoch_loss = 0
+    
+    # 진행 상황 표시
+    progress_bar = tqdm(train_loader, desc=f'Epoch {epoch+1}')
+    
+    for x, y in progress_bar:
+        # 데이터를 GPU로 이동
+        x, y = x.to(device), y.to(device)
+        
+        # 경사 초기화
+        optimizer.zero_grad()
+        
+        # 순방향 전파
+        logits, _ = model(x)
+        
+        # 손실 계산 (reshape 필요)
+        loss = criterion(logits.view(-1, logits.size(-1)), y.view(-1))
+        
+        # 역전파 및 최적화
+        loss.backward()
+        optimizer.step()
+        
+        # 손실 누적
+        epoch_loss += loss.item()
+        
+        # 진행 상황 업데이트
+        progress_bar.set_postfix({'loss': f'{loss.item():.4f}'})
+    
+    return epoch_loss / len(train_loader)
+
+# 검증 함수
+def evaluate(model, val_loader, criterion, device):
+    model.eval()
+    val_loss = 0
+    
+    with torch.no_grad():
+        for x, y in val_loader:
+            x, y = x.to(device), y.to(device)
+            logits, _ = model(x)
+            loss = criterion(logits.view(-1, logits.size(-1)), y.view(-1))
+            val_loss += loss.item()
+    
+    return val_loss / len(val_loader)
+```
+
+```py
+        loss = criterion(logits.view(-1, logits.size(-1)), y.view(-1))
+```
+
+이 부분에서 보면
+
+- logits: 모델 출력 [batch_size, seq_len, vocab_size]
+
+- 예: [32, 50, 10000] - 32개 문장, 각 50개 단어, 10000개 어휘 점수
+
+- y: 타겟(정답) [batch_size, seq_len]
+
+- 예: [32, 50] - 32개 문장, 각 50개 단어의 정답 ID
+
+형태인데, CrossEntropyLoss는 다음 형태의 입력을 해야한다
+
+- 예측: [N, C] - N개 샘플, C개 클래스(어휘)
+
+- 타겟: [N] - N개 샘플의 정답 클래스 ID
+
+그러므로 결과값과 정답값을 오차함수에 맞게 변형하는 과정으로 
+
+- logits.size(-1): 마지막 차원 크기(vocab_size) 가져오기
+
+- view(-1, vocab_size): 3D 텐서를 2D로 변형
+
+- 결과: [batch_size×seq_len, vocab_size]
+
+- 예: [32×50, 10000] = [1600, 10000]
+
+가 되고 y 또한 저 과정을 통해서 
+
+- 2D 텐서를 1D로 평탄화
+
+- 결과: [batch_size×seq_len]
+
+- 예: [32×50] = [1600]
+
+가 된다.
+
+lstm모델 또한 loss계산을 할 때 굳이 시퀀스를 구별할 필요가 없다, 왜냐하면 lstm이 이미 문장의 순서와 맥락을 고려해서 처리를 하여 처리 logits를 내뱉었기에 문맥정보는 반영되있기 떄문에 상관 없다. 그러니까 y와 logits의 순서만 맞는 상태면 그냥 값만 오차를 구하면 된다.
+
+```py
+# 학습 및 텍스트 생성 코드 (구글 코랩용)
+def run_training(train_loader, val_loader, vocab_size, embedding_dim, hidden_dim, 
+                epochs, idx2token, token2idx, device):
+    # 구글 드라이브 마운트 (코랩에서만 필요)
+    import sys
+    if 'google.colab' in sys.modules:
+        from google.colab import drive
+        drive.mount('/content/drive')
+        model_save_path = '/content/drive/MyDrive/lstm_models'
+        
+        # 저장 디렉토리 생성
+        import os
+        os.makedirs(model_save_path, exist_ok=True)
+        print(f"모델이 {model_save_path}에 저장됩니다.")
+    else:
+        model_save_path = './lstm_models'
+        import os
+        os.makedirs(model_save_path, exist_ok=True)
+    
+    # 모델, 손실 함수, 옵티마이저 초기화
+    model, criterion, optimizer = initialize_model(vocab_size, embedding_dim, hidden_dim)
+    
+    # 텍스트 생성기 초기화
+    text_generator = PyTorchTextGenerator(model, idx2token, token2idx, device)
+    
+    # 훈련 시작
+    
+    for epoch in range(epochs):
+        start_time = time.time()
+        
+        # 훈련
+        train_loss = train(model, train_loader, criterion, optimizer, epoch, device)
+        
+        # 검증
+        val_loss = evaluate(model, val_loader, criterion, device)
+        
+        # 에폭 시간
+        epoch_time = time.time() - start_time
+        
+        # 결과 출력
+        print(f"Epoch {epoch+1}/{epochs} | 시간: {epoch_time:.2f}s")
+        print(f"훈련 손실: {train_loss:.4f} | 검증 손실: {val_loss:.4f}")
+        
+        # 텍스트 생성 예시
+        text_generator.generate("recipe for", max_tokens=100, temperature=1.0)
+        
+        
+    # 모델 저장 경로 생성
+    filename = f"{model_save_path}/best_lstm_model_epoch_{epoch+1}.pt"
+    
+    # 모델 저장
+    torch.save({
+        'model_state_dict': model.state_dict(),
+        'optimizer_state_dict': optimizer.state_dict(),
+        'train_loss': train_loss,
+        'val_loss': val_loss,
+        'epoch': epoch,
+        'vocab': vocab,
+        'token2idx': token2idx,
+        'idx2token': idx2token
+    }, filename)
+    print(f"모델 저장됨: {filename}")
+    
+        
+    return model, text_generator
+```
+
+```py
+# Colab에서 사용할 경우 위젯으로 구현
+def interactive_text_generation_colab(text_generator):
+    import ipywidgets as widgets
+    from IPython.display import display, HTML
+    
+    prompt_input = widgets.Text(
+        value='recipe for',
+        placeholder='시작 프롬프트를 입력하세요',
+        description='프롬프트:',
+        disabled=False
+    )
+    
+    max_tokens_slider = widgets.IntSlider(
+        value=100,
+        min=10,
+        max=500,
+        step=10,
+        description='최대 토큰:',
+        disabled=False,
+        continuous_update=False,
+        orientation='horizontal',
+        readout=True,
+        readout_format='d'
+    )
+    
+    temperature_slider = widgets.FloatSlider(
+        value=1.0,
+        min=0.1,
+        max=2.0,
+        step=0.1,
+        description='온도:',
+        disabled=False,
+        continuous_update=False,
+        orientation='horizontal',
+        readout=True,
+        readout_format='.1f'
+    )
+    
+    output = widgets.Output()
+    
+    generate_button = widgets.Button(
+        description='텍스트 생성',
+        disabled=False,
+        button_style='',
+        tooltip='클릭하여 텍스트 생성',
+        icon='play'
+    )
+    
+    def on_button_clicked(b):
+        with output:
+            output.clear_output()
+            print("생성 중...")
+            info = text_generator.generate(
+                prompt_input.value, 
+                max_tokens=max_tokens_slider.value, 
+                temperature=temperature_slider.value
+            )
+    
+    generate_button.on_click(on_button_clicked)
+    
+    # 위젯 배치
+    display(HTML("<h3>대화형 텍스트 생성기</h3>"))
+    display(prompt_input, max_tokens_slider, temperature_slider, generate_button, output)
+
+
+text_generator = model[1]
+
+# 코드 실행 (환경에 따라 적절한 함수 선택)
+import sys
+if 'google.colab' in sys.modules:
+    interactive_text_generation_colab(text_generator)
+else:
+    interactive_text_generation(text_generator)
+```
+
+
+
 
 
 
