--- a/_posts/2025-5-7-확률분포 예측.md
+++ b/_posts/2025-5-7-확률분포 예측.md
@@ -142,3 +142,37 @@ Apply to math.ipynb
 ### 4. 가정의 의미와 한계
 
 i.i.d. 가정은 수학적 모델링과 계산을 간편하게 만들어주지만, 현실 데이터가 항상 이 가정을 완벽하게 만족하지는 않는다. 예를 들어 시계열 데이터의 경우, 현재의 데이터 포인트가 과거의 데이터 포인트에 의존하는 경우가 많아 독립성 가정이 깨질 수 있다. 그럼에도 불구하고, i.i.d. 가정은 많은 경우에 유용한 근사치를 제공하며, 복잡한 현상을 이해하고 모델링하는 첫걸음이 된다.
+
+
+
+그리고 Log를 사용해서 가능도를 나타내는데
+
+### 왜 굳이 로그를 사용할까? 핵심은 '동등함'과 '실용성'
+
+1. 동등성
+
+로그 함수($\log(z)$)는 단조 증가(monotonically increasing) 함수다. 즉, 입력값 $z$가 커지면 $\log(z)$ 값도 항상 커진다.
+
+이 성질 때문에 중요한 사실이 하나 따라온다:
+
+- 원래 가능도 함수 $L(\phi)$를 최대로 만드는 모델 파라미터 $\hat{\phi}$의 위치는, 로그 가능도 함수 $\log L(\phi)$를 최대로 만드는 파라미터 $\hat{\phi}$의 위치와 정확히 동일하다.
+
+따라서 로그를 취한다고 해서 우리가 찾고자 하는 최적의 모델 파라미터가 달라지지 않는다. 목표는 여전히 같다.
+
+2. 실용성
+
+그렇다면 왜 번거롭게 로그를 취하는 걸까? 몇 가지 강력한 실용적 이점이 있다:
+
+- 곱셈을 덧셈으로: 로그의 기본 성질 $\log(ab) = \log a + \log b$ 덕분에, 가능도 함수에서의 수많은 확률값들의 곱셈이 로그 가능도에서는 덧셈으로 바뀐다. 이는 미분 계산 등을 훨씬 간편하게 만들어준다.
+
+- 수치 안정성 (언더플로우 방지): 확률값은 0과 1 사이의 작은 수다. 이런 작은 수들을 많이 곱하면 결과는 엄청나게 작아져서 컴퓨터가 유한한 정밀도로 표현하기 어려운 수준(언더플로우)이 될 수 있다. 하지만 로그를 취하면 이 문제가 크게 완화된다. 값의 스케일이 덧셈에 적합하게 바뀌고, 극단적으로 작은 값으로 인한 계산 오류를 줄일 수 있다.
+
+![image-20250507133910565](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250507133910565.png)
+
+### 결론
+
+로그 가능도를 사용하는 것은 원래의 최대 가능도 원리를 포기하는 것이 아니다.
+
+오히려, 최적의 모델을 찾는 목표는 그대로 유지하면서, 수학적 및 계산적 편의성과 안정성을 크게 높이는 현명한 방법이다.
+
+이것이 바로 딥러닝을 포함한 많은 통계적 모델 학습에서 로그 가능도가 널리 활용되는 이유다.
