--- a/_posts/2025-5-7-확률분포 예측.md
+++ b/_posts/2025-5-7-확률분포 예측.md
@@ -220,3 +220,39 @@ $$
 그리고 추론 단계에서는 이 예측된 분포로부터 가장 가능성이 높은 단일 값을 추출함으로써, 실용적인 의사결정에 필요한 명확한 예측값을 얻을 수 있다.
 
 이 과정은 모델이 데이터의 복잡한 확률적 특성을 학습하면서도, 필요에 따라 결정론적인 답변을 제공할 수 있도록 하는 유연성을 부여한다.
+
+**정리하자면 가능도란 해당 값이 나왔을 타당한 확률 이런 느낌으로 실제 값 yi에 가깝게 나온 가능도가 높을수록, 즉 모델이 예측한 확률분포에서 실제 값이 나올 확률이 가장 크다면, 다시 말해 가장 큰 조건부확률을 가진다면, 모델이 yi를 잘 설명한거니까  당연히 손실,오차가 적다고 생각하면 된다.**
+
+## NLL 손실의 또 다른 해석: 모델의 "놀람"을 통한 학습
+
+모델이 예측한 확률 분포 $Pr(y|x)$ 하에서 실제 정답 $y_i$가 나타날 가능성을 최대화하거나, 음의 로그 가능도(NLL)를 최소화하도록 모델을 학습시킨다는 것은 이미 논의되었다. 이 NLL 손실, 즉 $-\log Pr(y_i | x_i; \theta)$는 단순한 수학적 변환을 넘어 정보 이론(Information Theory)과 깊은 연관성을 가지며, 모델이 "얼마나 놀랐는지"를 측정하는 지표로 해석될 수 있다.
+
+### 정보량과 놀람의 정도
+
+어떤 사건의 발생 사실을 알게 되었을 때, 그 사건이 얼마나 드물거나 예상치 못한 것이었는지에 따라 얻게 되는 정보의 양은 달라진다. 예를 들어, "해가 동쪽에서 떴다"는 정보는 거의 놀랍지 않으므로 정보량이 적다. 반면, "한여름에 갑자기 눈이 펑펑 내릴 것이다"라는 정보는 매우 놀라우며 정보량이 많다고 할 수 있다.
+
+정보 이론에서는 특정 사건 $E$가 발생할 확률을 $P(E)$라고 할 때, 이 사건의 발생으로부터 얻는 정보량(또는 "놀람의 정도", "자기 정보량(self-information)")을 다음과 같이 정의한다:
+$$
+I(E) = -\log P(E)
+$$
+여기서 로그의 밑은 2 (비트 단위), 자연상수 $e$ (내트 단위), 또는 10 등이 사용될 수 있으나, 최적화 관점에서는 어떤 밑을 사용하든 상수 배 차이이므로 결과에 영향을 주지 않는다.
+
+이 정의로부터 다음 특징들을 파악할 수 있다:
+
+1. 확률이 낮은 사건일수록 정보량이 크다: $P(E)$가 0에 가까울수록 (매우 드문 사건), $-\log P(E)$ 값은 커진다. 즉, 더 놀랍고 더 많은 정보를 전달한다.
+
+1. 확률이 높은 사건일수록 정보량이 작다: $P(E)$가 1에 가까울수록 (매우 흔한 사건), $-\log P(E)$ 값은 0에 가까워진다. 즉, 덜 놀랍고 정보량이 적다.
+
+1. 확률이 1인 사건의 정보량은 0이다: 반드시 일어나는 사건은 새로운 정보를 제공하지 않는다.
+
+### NLL 손실: "평균 놀람"의 최소화
+
+이 개념을 NLL 손실 함수에 연결해보자. 각 학습 데이터 포인트 $(x_i, y_i)$에 대한 손실 기여분 $-\log Pr(y_i | x_i; \theta)$는, 모델이 입력 $x_i$를 보고 예측한 분포 $Pr(y | x_i; \theta)$ 하에서 실제 정답 $y_i$를 관찰했을 때 모델이 느끼는 "놀람의 정도" 또는 "정보량"에 해당한다.
+
+- 모델이 $y_i$를 높은 확률로 예측했다면 ($Pr(y_i | x_i; \theta)$가 크다면), 모델은 "별로 놀라지 않았고", 해당 데이터 포인트에 대한 손실은 작다.
+
+- 모델이 $y_i$를 낮은 확률로 예측했다면 ($Pr(y_i | x_i; \theta)$가 작다면), 모델은 "매우 놀랐고", 해당 데이터 포인트에 대한 손실은 크다.
+
+따라서 전체 학습 데이터셋에 대한 NLL 손실 $\text{Loss}(\theta) = - \sum_{i=1}^{N} \log Pr(y_i | x_i; \theta)$를 최소화하는 과정은, 모델이 모든 학습 데이터에 대해 느끼는 "총 놀람의 양" 또는 "총 정보량"을 최소화하려는 시도로 해석할 수 있다. 다시 말해, 모델이 학습 데이터를 가장 "당연하게" 또는 "놀랍지 않게" 받아들이도록 파라미터 $\theta$를 조정하는 것이다.
+
+이러한 관점은 NLL 손실이 왜 합리적인 손실 함수인지에 대한 또 다른 직관을 제공한다. 모델이 현실을 잘 반영한다면, 실제 발생하는 사건들에 대해 크게 놀라지 않아야 하며, NLL은 바로 이러한 특성을 정량화하여 모델 학습의 목표로 삼는다.
